Fix navbar width issue on narrow screens
The navbar exceeded the screen width on phones with narrow displays. Adjusted by reducing the font size of navbar elements to ensure proper fit across all screen sizes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ a{
 		justify-content: center;
 	}
 	li a{
-		font-size: 35px;	
+		font-size: 32px;	
 	}
 	h1{
 		font-size: 40px;	
@@ -65,7 +65,7 @@ nav li:hover{ background-color: rgb(0, 204, 255); }
 
 main{
 	width: 90%;
-	margin: 0 auto 0 auto;
+	margin: 0 auto 5vh auto;
 	height: auto;
 }
 
